--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 </head>
 
 <body>
+
+    <!-- Start Navbar -->
     <header class="bg-dark">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -49,7 +51,160 @@
         </nav>
     </header>
 
-    
+    <!-- End Navbar -->
+
+    <div class="container">
+        <div class="row row-cols-sm-1 row-cols-lg-2 mb-3">
+            <div class="col-lg-8">
+
+                <!-- Catalogo + Button -->
+                <section class="d-flex justify-content-between align-items-center mb-4">
+                    <h2>Catalogo Libri</h2>
+                    <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                    </a>
+                </section>
+
+                <!-- Table -->
+
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="w-50">Titolo</th>
+                            <th scope="col" class="d-sm-none d-md-block d-md-table-cell">Data Prestito</th>
+                            <th scope="col">Stato</th>
+                            <th scope="col" class="text-center">Azioni</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+
+                        <tr class="table-secondary">
+                            <td scope="row">I pilastri della terra</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td scope="row">I promessi sposi</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr class="table-secondary">
+                            <td scope="row">Il signore degli anelli</td>
+                            <td class="d-none d-md-table-cell">18/10/2023</td>
+                            <td><span class="badge text-bg-warning text-light">in prestito</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td scope="row">Harry Potter e la pietra filosofale</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr class="table-secondary">
+                            <td scope="row">Codice Da Vinci</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td scope="row">Shining</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr class="table-secondary">
+                            <td scope="row">La divina commedia</td>
+                            <td class="d-none d-md-table-cell">21/09/2023</td>
+                            <td><span class="badge text-bg-warning text-light">in prestito</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td scope="row">Il trono di spade</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr class="table-secondary">
+                            <td scope="row">Il mondo di Sofia</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-danger">Non disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td scope="row">Le cronache di Narnia: il leona, la strega e l'armadio</td>
+                            <td class="d-none d-md-table-cell">25/07/2023</td>
+                            <td><span class="badge text-bg-warning text-light">in prestito</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr class="table-secondary">
+                            <td scope="row">Il piccolo principe</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td scope="row">La storia infinita</td>
+                            <td class="d-none d-md-table-cell">-</td>
+                            <td><span class="badge text-bg-success">Disponibile</span></td>
+                            <td class="text-center text-nowrap">
+                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
+
+                <!-- End Table -->
+
+            </div>
+        </div>
+    </div>
 
 
 
