--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -92,8 +94,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -102,8 +106,10 @@
                             <td class="d-none d-md-table-cell">18/10/2023</td>
                             <td><span class="badge text-bg-warning text-light">in prestito</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -112,8 +118,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -122,8 +130,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-danger">Non disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -132,8 +142,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -142,8 +154,10 @@
                             <td class="d-none d-md-table-cell">21/09/2023</td>
                             <td><span class="badge text-bg-warning text-light">in prestito</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -152,8 +166,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -162,8 +178,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-danger">Non disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -172,8 +190,10 @@
                             <td class="d-none d-md-table-cell">25/07/2023</td>
                             <td><span class="badge text-bg-warning text-light">in prestito</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -182,8 +202,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -192,8 +214,10 @@
                             <td class="d-none d-md-table-cell">-</td>
                             <td><span class="badge text-bg-success">Disponibile</span></td>
                             <td class="text-center text-nowrap">
-                                <button type="button" class="btn btn-outline-secondary me-1"><i class="fa-solid fa-pencil"></i></button>
-                                <button type="button" class="btn btn-outline-secondary"><i class="fa-solid fa-trash"></i></button>
+                                <button type="button" class="btn btn-outline-secondary me-1"><i
+                                        class="fa-solid fa-pencil"></i></button>
+                                <button type="button" class="btn btn-outline-secondary"><i
+                                        class="fa-solid fa-trash"></i></button>
                             </td>
                         </tr>
 
@@ -201,11 +225,17 @@
                 </table>
 
                 <!-- End Table -->
-
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    Todo
+                </div>
+                <div class="card-body">
+                    This is some text within a card body.
+                </div>
             </div>
         </div>
     </div>
-
 
 
 
