--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <!-- End Navbar -->
 
     <div class="container">
-        <div class="row row-cols-sm-1 row-cols-lg-2 mb-3">
+        <div class="row row-cols-sm-1 row-cols-lg-2 mb3">
             <div class="col-lg-8">
 
                 <!-- Catalogo + Button -->
@@ -226,14 +226,27 @@
 
                 <!-- End Table -->
             </div>
-            <div class="card">
-                <div class="card-header">
-                    Todo
+            <div class="col-lg-4">
+                <div class="card mb-4">
+                    <h2 class="card-header">Todo</h2>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                                <label class="form-check-label" for="firstCheckbox">Chiamare segreteria</label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                                <label class="form-check-label" for="secondCheckbox">Mandare avvisi prestiti
+                                    scaduti</label>
+                            </li>
+                            <li class="list-group-item">
+                                <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                                <label class="form-check-label" for="thirdCheckbox">Ordinare nuovi libri</label>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="card-body">
-                    This is some text within a card body.
-                </div>
-            </div>
         </div>
     </div>
 
