[UPD]Add F.A.Q card to the main layout

--- a/index.html
+++ b/index.html
@@ -247,6 +247,16 @@
                         </ul>
                     </div>
                 </div>
+            </div>
+
+            <div class="card">
+                <div class="card-header">
+                    FAQ
+                </div>
+                <div class="card-body">
+                    This is some text within a card body.
+                </div>
+            </div>
         </div>
     </div>
 
