[UPD] spacing done

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                         </li>
                     </ul>
                     <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Cerca..." aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Cerca</button>
+                        <input class="form-control me-2"  type="search" placeholder="Cerca..." aria-label="Search">
+                        <button class="btn btn-outline-light" type="submit">Cerca</button>
                     </form>
                 </div>
             </div>
@@ -54,7 +54,7 @@
     <!-- End Navbar -->
 
     <div class="container">
-        <div class="row row-cols-sm-1 row-cols-lg-2 mb3">
+        <div class="row row-cols-sm-1 row-cols-lg-2 mt-3">
             <div class="col-lg-8">
 
                 <!-- Catalogo + Button -->
