--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <thead>
                         <tr>
                             <th scope="col" class="w-50">Titolo</th>
-                            <th scope="col" class="d-sm-none d-md-block d-md-table-cell">Data Prestito</th>
+                            <th scope="col" class="d-none d-md-block d-md-table-cell">Data Prestito</th>
                             <th scope="col">Stato</th>
                             <th scope="col" class="text-center">Azioni</th>
                         </tr>
