[UPD] Change 'Aggiungi Libro' button to link to addbook.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <!-- Catalogo + Button -->
                 <section class="d-flex justify-content-between align-items-center mb-4">
                     <h2>Catalogo Libri</h2>
-                    <button type="button" class="btn btn-primary">Aggiungi Libro</button>
+                    <a href="addbook.html"><button type="button" class="btn btn-primary">Aggiungi Libro</button>
                     </a>
                 </section>
 
