[ADD] Implement form layout for adding a new book in addbook.html

--- a/addbook.html
+++ b/addbook.html
@@ -47,6 +47,41 @@
         </nav>
     </header>
 
+    <main>
+        <h2>Nuovo Libro</h2>
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Nome autore</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il Nome dell'autore">
+                          </div>
+                    </form>
+                </div>
+                <div class="col-6">
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Nome autore</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il Cognome dell'autore">
+                          </div>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <form>
+                        <div class="mb-3">
+                            <label for="exampleInputEmail1" class="form-label">Titolo</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il titolo del libro">
+                            <div class="form-text">Titolo versione italiana</div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <!-- End Navbar -->
 
 
