--- a/addbook.html
+++ b/addbook.html
@@ -62,21 +62,22 @@
                 <div class="col-6">
                     <form>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Nome autore</label>
+                            <label for="exampleInputEmail1" class="form-label">Cognome autore</label>
                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il Cognome dell'autore">
                           </div>
                     </form>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <form>
-                        <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Titolo</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il titolo del libro">
-                            <div class="form-text">Titolo versione italiana</div>
-                        </div>
-                    </form>
+
+                <div class="row">
+                    <div class="col-12">
+                        <form>
+                            <div class="mb-3">
+                                <label for="exampleInputEmail1" class="form-label">Titolo</label>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il titolo del libro">
+                                <div class="form-text">Titolo versione italiana</div>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
