[ADD] Add genere selection dropdown to addbook.html

--- a/addbook.html
+++ b/addbook.html
@@ -79,6 +79,18 @@
                         </form>
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <h5>Genere</h5>
+                        <select class="form-select" aria-label="Default select example">
+                            <option>Scegli il genere</option>
+                            <option value="1">Azione</option>
+                            <option value="2">Fantasy</option>
+                            <option value="3">Horror</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
