--- a/addbook.html
+++ b/addbook.html
@@ -48,13 +48,13 @@
     </header>
 
     <main>
-        <h2>Nuovo Libro</h2>
         <div class="container">
-            <div class="row">
+            <h2 class="mt-4">Nuovo Libro</h2>
+            <div class="row mt-4">
                 <div class="col-6">
                     <form>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Nome autore</label>
+                            <h6>Nome Autore</h6>
                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il Nome dell'autore">
                           </div>
                     </form>
@@ -62,17 +62,17 @@
                 <div class="col-6">
                     <form>
                         <div class="mb-3">
-                            <label for="exampleInputEmail1" class="form-label">Cognome autore</label>
+                            <h6>Cognome Autore</h6>
                             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il Cognome dell'autore">
                           </div>
                     </form>
                 </div>
 
-                <div class="row">
+                <div class="row mt-4">
                     <div class="col-12">
                         <form>
                             <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Titolo</label>
+                                <h6>Titolo</h6>
                                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il titolo del libro">
                                 <div class="form-text">Titolo versione italiana</div>
                             </div>
@@ -80,18 +80,43 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div class="row mt-4">
                     <div class="col-12">
-                        <h5>Genere</h5>
+                        <h6>Genere</h6>
                         <select class="form-select" aria-label="Default select example">
-                            <option>Scegli il genere</option>
+                            <option> Scegli il genere</option>
                             <option value="1">Azione</option>
                             <option value="2">Fantasy</option>
                             <option value="3">Horror</option>
                         </select>
                     </div>
                 </div>
+
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <form>
+                            <div class="mb-3">
+                                <h6>Anno di Pubblicazione</h6>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci l'anno">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                
+                <div class="row mt-4">
+                    <div class="col-12">
+                        <form>
+                            <div class="mb-3">
+                                <h6>ISBN#</h6>
+                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il codice ISBN#">
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
+            <hr class="mt-3">
+
+            
         </div>
     </main>
 
