--- a/addbook.html
+++ b/addbook.html
@@ -116,6 +116,20 @@
             </div>
             <hr class="mt-3">
 
+            <div class="row mt-4">
+                <div class="col-12">
+                    <h6>Note</h6>
+                    <textarea class="form-control" id="note" rows="3" placeholder="Inserisci eventuali note sul libro"></textarea>
+                </div>
+            </div>
+
+            <div class="form-check mt-4">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Disponibile anche in digitale
+                </label>
+            </div>
+
             
         </div>
     </main>
