--- a/addbook.html
+++ b/addbook.html
@@ -130,7 +130,7 @@
                 </label>
             </div>
 
-            
+            <button type="button" class="btn btn-primary mt-3">Aggiungi libro</button>
         </div>
     </main>
 
