[DONE] done bonus

--- a/addbook.html
+++ b/addbook.html
@@ -55,34 +55,37 @@
                     <form>
                         <div class="mb-3">
                             <h6>Nome Autore</h6>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il Nome dell'autore">
-                          </div>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Inserisci il Nome dell'autore">
+                        </div>
                     </form>
                 </div>
                 <div class="col-6">
                     <form>
                         <div class="mb-3">
                             <h6>Cognome Autore</h6>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il Cognome dell'autore">
-                          </div>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Inserisci il Cognome dell'autore">
+                        </div>
                     </form>
                 </div>
 
-                <div class="row mt-4">
+                <div class="row mt-2">
                     <div class="col-12">
                         <form>
                             <div class="mb-3">
-                                <h6>Titolo</h6>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il titolo del libro">
+                                <h6 class="mb-2">Titolo</h6>
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Inserisci il titolo del libro">
                                 <div class="form-text">Titolo versione italiana</div>
                             </div>
                         </form>
                     </div>
                 </div>
 
-                <div class="row mt-4">
-                    <div class="col-12">
-                        <h6>Genere</h6>
+                <div class="row mt-2">
+                    <div class="col-12 col-lg-4">
+                        <h6 class="mb-2">Genere</h6>
                         <select class="form-select" aria-label="Default select example">
                             <option> Scegli il genere</option>
                             <option value="1">Azione</option>
@@ -90,43 +93,45 @@
                             <option value="3">Horror</option>
                         </select>
                     </div>
-                </div>
 
-                <div class="row mt-4">
-                    <div class="col-12">
+                    <div class="col-12 col-lg-4 mt-3">
                         <form>
                             <div class="mb-3">
                                 <h6>Anno di Pubblicazione</h6>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci l'anno">
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Inserisci l'anno">
                             </div>
                         </form>
                     </div>
-                </div>
-                
-                <div class="row mt-4">
-                    <div class="col-12">
+
+                    <div class="col-12 col-lg-4 mt-2">
                         <form>
                             <div class="mb-3">
                                 <h6>ISBN#</h6>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Inserisci il codice ISBN#">
+                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                    aria-describedby="emailHelp" placeholder="Inserisci il codice ISBN#">
                             </div>
                         </form>
                     </div>
+
                 </div>
+
+
             </div>
             <hr class="mt-3">
 
             <div class="row mt-4">
                 <div class="col-12">
                     <h6>Note</h6>
-                    <textarea class="form-control" id="note" rows="3" placeholder="Inserisci eventuali note sul libro"></textarea>
+                    <textarea class="form-control" id="note" rows="3"
+                        placeholder="Inserisci eventuali note sul libro"></textarea>
                 </div>
             </div>
 
             <div class="form-check mt-4">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                 <label class="form-check-label" for="flexCheckDefault">
-                  Disponibile anche in digitale
+                    Disponibile anche in digitale
                 </label>
             </div>
 
