Refactor form layout in addbook.html to improve structure and remove unnecessary classes

--- a/addbook.html
+++ b/addbook.html
@@ -94,22 +94,20 @@
                         </select>
                     </div>
 
-                    <div class="col-12 col-lg-4 mt-3">
+                    <div class="col-12 col-lg-4">
                         <form>
                             <div class="mb-3">
                                 <h6>Anno di Pubblicazione</h6>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Inserisci l'anno">
+                                <input class="form-control" placeholder="Inserisci il codice ISBN#">
                             </div>
                         </form>
                     </div>
 
-                    <div class="col-12 col-lg-4 mt-2">
+                    <div class="col-12 col-lg-4">
                         <form>
                             <div class="mb-3">
                                 <h6>ISBN#</h6>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp" placeholder="Inserisci il codice ISBN#">
+                                <input class="form-control" placeholder="Inserisci il codice ISBN#">
                             </div>
                         </form>
                     </div>
